[package]
name = "gemi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
flagset = { version = "0.4.6", default-features = false, features = [] }
serde = { version = "1.0.214", default-features = false, features = ["std"], optional = true }
zstd = { version = "0.13.2", default-features = false, features = [], optional = true }
base64 = { version = "0.22.1", default-features = false, features = ["std"], optional = true }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["std", "serde"], optional = true }

[features]
default = []
snapshots = [
    "serde",
    "serde/serde_derive",
    "flagset/serde",
    "zstd",
    "base64",
    "bincode",
]
