[package]
name = "update-test-report"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.3"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.1.0"
tokio-stream = "0.1.14"
gbemu-core = { path = "../../lib/core" }
tests-shared = { path = "../shared" }
