[package]
name = "update-test-report"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"
tokio-stream = "0.1.14"
gemi-core = { path = "../../lib/core" }
tests-shared = { path = "../shared" }
