[package]
name = "update-test-report"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.8"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
gemi-core = { path = "../../lib/core" }
tests-shared = { path = "../shared" }
